// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp component matches snapshot when isFormValid is true 1`] = `
<div
  className="auth-main__container"
>
  <Row
    justify="center"
  >
    <Col
      lg={24}
      md={23}
      span={24}
    >
      <div
        className="auth-main__header"
      >
        <Logo
          bigLogoClassName="d-lg-none"
          isLink={true}
          isWhite={false}
          smallLogoClassName=""
        />
        <p
          className="mr-8 ml-auto"
        >
          <Memo(FormattedMessage)
            id="signUp.alreadyHaveAccount"
          />
        </p>
        <Link
          href="/log_in"
        >
          <Button
            size="small"
            type="secondary"
          >
            <Memo(FormattedMessage)
              id="shared.logIn"
            />
          </Button>
        </Link>
      </div>
    </Col>
    <Col
      lg={16}
      md={23}
      span={24}
    >
      <div>
        <h1
          className="main-title"
        >
          <Memo(FormattedMessage)
            id="shared.signUp"
          />
        </h1>
        <p
          className="mb-24 mb-md-40"
        >
          <Memo(FormattedMessage)
            id="signUp.searchDiscoverBookCampervans"
          />
        </p>
        <ForwardRef(InternalForm)
          layout="vertical"
        >
          <Row
            gutter={24}
          >
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="given-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.firstName",
                  }
                }
                name="firstName"
                placeholder="Cory"
              />
            </Col>
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="family-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.lastName",
                  }
                }
                name="lastName"
                placeholder="Hubbard"
              />
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="email"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.email",
                  }
                }
                name="email"
                placeholder={
                  Object {
                    "id": "shared.emailPlaceholder",
                  }
                }
                type="email"
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="d-flex align-items-center"
              >
                <Field
                  component={[Function]}
                  label={
                    Object {
                      "id": "signUp.phoneNumber",
                    }
                  }
                  name="phoneNumber"
                />
              </div>
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="new-password"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.password",
                  }
                }
                name="password"
                withPasswordStrength={true}
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="auth-main__btn-wrap"
              >
                <GradientButton
                  className="min-w-180 main-btn--sm-100"
                  disabled={false}
                  loading={false}
                  onClick={[MockFunction]}
                  size="large"
                  text={
                    Object {
                      "id": "signUp.createAccount",
                    }
                  }
                />
              </div>
            </Col>
          </Row>
        </ForwardRef(InternalForm)>
        <div
          className="mb-24"
        >
          <Row
            gutter={24}
          >
            <Col
              span={24}
            >
              <Divider
                className="mt-0"
                plain={true}
              >
                <Memo(FormattedMessage)
                  id="auth.or"
                />
              </Divider>
            </Col>
            <Connect(AuthSocial) />
          </Row>
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="mt-auto text-align-center"
  >
    <p>
      <Memo(FormattedMessage)
        id="signUp.bySigningUpAgree"
      />
       
      <Link
        href="/terms-of-service"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.vancationTermsOfService"
          />
        </a>
      </Link>
       
      <Memo(FormattedMessage)
        id="signUp.and"
      />
       
      <Link
        href="/privacy-policy"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.privacyPolicy"
          />
        </a>
      </Link>
    </p>
  </div>
</div>
`;

exports[`SignUp component matches snapshot when isSubmitting 1`] = `
<div
  className="auth-main__container"
>
  <Row
    justify="center"
  >
    <Col
      lg={24}
      md={23}
      span={24}
    >
      <div
        className="auth-main__header"
      >
        <Logo
          bigLogoClassName="d-lg-none"
          isLink={true}
          isWhite={false}
          smallLogoClassName=""
        />
        <p
          className="mr-8 ml-auto"
        >
          <Memo(FormattedMessage)
            id="signUp.alreadyHaveAccount"
          />
        </p>
        <Link
          href="/log_in"
        >
          <Button
            size="small"
            type="secondary"
          >
            <Memo(FormattedMessage)
              id="shared.logIn"
            />
          </Button>
        </Link>
      </div>
    </Col>
    <Col
      lg={16}
      md={23}
      span={24}
    >
      <div>
        <h1
          className="main-title"
        >
          <Memo(FormattedMessage)
            id="shared.signUp"
          />
        </h1>
        <p
          className="mb-24 mb-md-40"
        >
          <Memo(FormattedMessage)
            id="signUp.searchDiscoverBookCampervans"
          />
        </p>
        <ForwardRef(InternalForm)
          layout="vertical"
        >
          <Row
            gutter={24}
          >
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="given-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.firstName",
                  }
                }
                name="firstName"
                placeholder="Cory"
              />
            </Col>
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="family-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.lastName",
                  }
                }
                name="lastName"
                placeholder="Hubbard"
              />
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="email"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.email",
                  }
                }
                name="email"
                placeholder={
                  Object {
                    "id": "shared.emailPlaceholder",
                  }
                }
                type="email"
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="d-flex align-items-center"
              >
                <Field
                  component={[Function]}
                  label={
                    Object {
                      "id": "signUp.phoneNumber",
                    }
                  }
                  name="phoneNumber"
                />
              </div>
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="new-password"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.password",
                  }
                }
                name="password"
                withPasswordStrength={true}
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="auth-main__btn-wrap"
              >
                <Button
                  className="min-w-180 main-btn--sm-100"
                  disabled={true}
                  loading={true}
                  onClick={[MockFunction]}
                  size="large"
                >
                  <Memo(FormattedMessage)
                    id="signUp.createAccount"
                  />
                </Button>
              </div>
            </Col>
          </Row>
        </ForwardRef(InternalForm)>
        <div
          className="mb-24"
        >
          <Row
            gutter={24}
          >
            <Col
              span={24}
            >
              <Divider
                className="mt-0"
                plain={true}
              >
                <Memo(FormattedMessage)
                  id="auth.or"
                />
              </Divider>
            </Col>
            <Connect(AuthSocial) />
          </Row>
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="mt-auto text-align-center"
  >
    <p>
      <Memo(FormattedMessage)
        id="signUp.bySigningUpAgree"
      />
       
      <Link
        href="/terms-of-service"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.vancationTermsOfService"
          />
        </a>
      </Link>
       
      <Memo(FormattedMessage)
        id="signUp.and"
      />
       
      <Link
        href="/privacy-policy"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.privacyPolicy"
          />
        </a>
      </Link>
    </p>
  </div>
</div>
`;

exports[`SignUp component matches snapshot with default props 1`] = `
<div
  className="auth-main__container"
>
  <Row
    justify="center"
  >
    <Col
      lg={24}
      md={23}
      span={24}
    >
      <div
        className="auth-main__header"
      >
        <Logo
          bigLogoClassName="d-lg-none"
          isLink={true}
          isWhite={false}
          smallLogoClassName=""
        />
        <p
          className="mr-8 ml-auto"
        >
          <Memo(FormattedMessage)
            id="signUp.alreadyHaveAccount"
          />
        </p>
        <Link
          href="/log_in"
        >
          <Button
            size="small"
            type="secondary"
          >
            <Memo(FormattedMessage)
              id="shared.logIn"
            />
          </Button>
        </Link>
      </div>
    </Col>
    <Col
      lg={16}
      md={23}
      span={24}
    >
      <div>
        <h1
          className="main-title"
        >
          <Memo(FormattedMessage)
            id="shared.signUp"
          />
        </h1>
        <p
          className="mb-24 mb-md-40"
        >
          <Memo(FormattedMessage)
            id="signUp.searchDiscoverBookCampervans"
          />
        </p>
        <ForwardRef(InternalForm)
          layout="vertical"
        >
          <Row
            gutter={24}
          >
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="given-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.firstName",
                  }
                }
                name="firstName"
                placeholder="Cory"
              />
            </Col>
            <Col
              md={12}
              span={24}
            >
              <Field
                autoComplete="family-name"
                component={[Function]}
                label={
                  Object {
                    "id": "signUp.lastName",
                  }
                }
                name="lastName"
                placeholder="Hubbard"
              />
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="email"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.email",
                  }
                }
                name="email"
                placeholder={
                  Object {
                    "id": "shared.emailPlaceholder",
                  }
                }
                type="email"
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="d-flex align-items-center"
              >
                <Field
                  component={[Function]}
                  label={
                    Object {
                      "id": "signUp.phoneNumber",
                    }
                  }
                  name="phoneNumber"
                />
              </div>
            </Col>
            <Col
              span={24}
            >
              <Field
                autoComplete="new-password"
                component={[Function]}
                label={
                  Object {
                    "id": "shared.password",
                  }
                }
                name="password"
                withPasswordStrength={true}
              />
            </Col>
            <Col
              span={24}
            >
              <div
                className="auth-main__btn-wrap"
              >
                <Button
                  className="min-w-180 main-btn--sm-100"
                  disabled={false}
                  loading={false}
                  onClick={[MockFunction]}
                  size="large"
                >
                  <Memo(FormattedMessage)
                    id="signUp.createAccount"
                  />
                </Button>
              </div>
            </Col>
          </Row>
        </ForwardRef(InternalForm)>
        <div
          className="mb-24"
        >
          <Row
            gutter={24}
          >
            <Col
              span={24}
            >
              <Divider
                className="mt-0"
                plain={true}
              >
                <Memo(FormattedMessage)
                  id="auth.or"
                />
              </Divider>
            </Col>
            <Connect(AuthSocial) />
          </Row>
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="mt-auto text-align-center"
  >
    <p>
      <Memo(FormattedMessage)
        id="signUp.bySigningUpAgree"
      />
       
      <Link
        href="/terms-of-service"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.vancationTermsOfService"
          />
        </a>
      </Link>
       
      <Memo(FormattedMessage)
        id="signUp.and"
      />
       
      <Link
        href="/privacy-policy"
      >
        <a
          className="main-link"
          rel="noreferrer"
          target="_blank"
        >
          <Memo(FormattedMessage)
            id="signUp.privacyPolicy"
          />
        </a>
      </Link>
    </p>
  </div>
</div>
`;
